--- a/contact.css
+++ b/contact.css
@@ -55,7 +55,7 @@ input[type=submit]:hover {
 }
 
 .footer {
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
