--- a/homepage.css
+++ b/homepage.css
@@ -1,6 +1,8 @@
 body {
     border-top: 5px solid #33704E;
-
+	width: 100%;
+	height: 100%;
+	margin: auto;
 }
 
 .DivStyle {
@@ -8,7 +10,6 @@ body {
     font-size: 20px;
 
 }
-
 
 .footer {
     position: absolute;
