--- a/sponsors.css
+++ b/sponsors.css
@@ -1,6 +1,12 @@
+* {
+    font-family: 'Poppins';
+}
+
 body {
     border-top: 5px solid #33704E;
-
+	width: 100%;
+	height: 100%;
+	margin: auto;
 }
 
 .DivStyle {
@@ -9,20 +15,21 @@ body {
 
 }
 
+  .clearfix:after {
+	content: "";
+	display: table;
+	clear: both;
+      }
 
-.footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #33704E;
-    color: white;
-    text-align: left;
-    padding: 10px;
-    font-family: 'Poppins';
-    font-size: 12px;
-}
-
-* {
-    font-family: 'Poppins';
-}
+      .footer {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #33704E;
+        color: white;
+        text-align: left;
+        padding: 10px;
+        font-family: 'Poppins';
+        font-size: 12px;
+    }
