--- a/homepage.css
+++ b/homepage.css
@@ -3,12 +3,12 @@ body {
 	width: 100%;
 	height: 100%;
 	margin: auto;
+    background-color: #242526;
 }
 
 .DivStyle {
     font-family: 'Poppins';
     font-size: 20px;
-
 }
 
 .footer {
